增加邮件测试、java8 Stream接口测试；jdbc、动态代理、异常复习